examples/test/testpolicy4247.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4247
  namespace: namespace244
spec:
  podSelector:
    matchLabels:
      key37: value13
      key4: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value22
          key38: value26
          key8: value21
      podSelector:
        matchLabels:
          key24: value23
